--- a/index.html
+++ b/index.html
@@ -2,9 +2,28 @@
 <html class="scroll-smooth" lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+
+    <!-- Primary Meta Tags -->
+    <title>Portfolio</title>
+    <meta name="title" content="Portfolio" />
+    <meta name="description" content="This is my portfolio." />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://htetlinoo.tech/" />
+    <meta property="og:title" content="Portfolio" />
+    <meta property="og:description" content="This is my portfolio." />
+    <meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://htetlinoo.tech/" />
+    <meta property="twitter:title" content="Portfolio" />
+    <meta property="twitter:description" content="This is my portfolio." />
+    <meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+
+    <!-- Meta Tags Generated with https://metatags.io -->
   </head>
   <body>
     <div id="root"></div>
