--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>Portfolio</title>
     <meta name="title" content="Portfolio" />
     <meta name="description" content="This is my portfolio." />
-
+    <link rel="shortcut icon" href="./public/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="./public/favicon.ico" type="image/x-icon" />
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://htetlinoo.tech/" />
