--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Primary Meta Tags -->
-    <title>Portfolio</title>
+    <title>Htet Lin Oo</title>
     <meta name="title" content="Portfolio" />
     <meta name="description" content="This is my portfolio." />
     <link rel="shortcut icon" href="./public/favicon.ico" type="image/x-icon" />
