--- a/index.html
+++ b/index.html
@@ -8,21 +8,21 @@
     <title>Htet Lin Oo</title>
     <meta name="title" content="Portfolio" />
     <meta name="description" content="This is my portfolio." />
-    <link rel="shortcut icon" href="./public/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://htetlinoo.tech/" />
     <meta property="og:title" content="Portfolio" />
     <meta property="og:description" content="This is my portfolio." />
-    <meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+    <meta property="og:image" content="/ogp-img.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://htetlinoo.tech/" />
     <meta property="twitter:title" content="Portfolio" />
     <meta property="twitter:description" content="This is my portfolio." />
-    <meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+    <meta property="twitter:image" content="/ogp-img.png" />
 
     <!-- Meta Tags Generated with https://metatags.io -->
   </head>
